header section style done

--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style.css">
         <title>Faugei</title>
     </head>
-    <body>
+    <body class="inter">
         <header>
             <nav>
                 <a href="#">
                     <img src="./images/logo.png" alt="Logo" />
                 </a>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a id="home" href="#">Home</a></li>
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Cart(556)</a></li>
                 </ul>
             </nav>
 
-            <section>
+            <section class="hero">
                 <div>
-                    <h2>ALWAYS <span>FRESH FLOWERS</span></h2>
+                    <h2 class="noto-serif">ALWAYS <span>FRESH FLOWERS</span></h2>
                     <p>
                         Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.
                     </p>
                 </div>
                 <img src="./images/hero-flower.png" alt="flower" />
-            </section>
+            </section>"
+
         </header>
 
         <main>
