plants section style done

--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
                     </p>
                 </div>
                 <img src="./images/hero-flower.png" alt="flower" />
-            </section>"
+            </section>
 
         </header>
 
         <main>
-            <div>
-                <div>
-                    <h2><span>Our</span> Plants</h2>
+            <div class="plants">
+                <div class="top">
+                    <h2 class="noto-serif"><span>Our</span> Plants</h2>
                     <p>
-                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
                     </p>
                 </div>
 
-                <div>
+                <div class="cart-area">
                     <div>
                         <img src="./images/sample-flower-image.png" alt="Sample flower" />
                         <p>Lily Blossom</p>
