lover section style done

--- a/index.html
+++ b/index.html
@@ -99,12 +99,13 @@
                     </div>
                 </div>
 
-                <div>
-                    <div>
+                <div class="lover">
+                    <div class="love-image">
                         <img src="./images/trusted-badge.png" alt="" />
                     </div>
-                    <div>
-                        <h2>Flower & Plants Lover</h2>
+
+                    <div class="love-content">
+                        <h2 class="noto-serif">Flower & Plants Lover</h2>
                         <ul>
                             <li>
                                 Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
