latest deals style done

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
             </div>
 
             <article>
-                <div>
-                    <h2><span>Latest</span>Deals</h2>
+                <div class="top">
+                    <h2 class="noto-serif"><span>Latest</span> Deals</h2>
                     <p>
-                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+                        Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.
                     </p>
                 </div>
-                <div>
+                <div class="deals">
                     <div>
                         <h3>60% Off | Bloom Plant</h3>
                         <a href="#">Shop Now</a>
