join section style done

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             </article>
         </main>
 
-        <div>
-            <div>
-                <h2>Join the colorful Bunch</h2>
+        <div class="join">
+            <div class="join-content">
+                <h2 class="noto-serif">Join the colorful Bunch</h2>
                 <form>
                     <input type="text" placeholder="write email" />
                     <button>subscribe</button>
