footer section style done

--- a/index.html
+++ b/index.html
@@ -158,14 +158,13 @@
         </div>
 
         <footer>
-            <div>
-                <div>
+                <div class="brand-info">
                     <img src="./images/logo.png" alt="Logo" />
                     <p>
-                        Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                        Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop.
                     </p>
                 </div>
-                <div>
+                <div class="primary-links">
                     <nav>
                         <ul>
                             <li><a href="#">Home</a></li>
@@ -176,7 +175,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div>
+                <div class="secondary-links">
                     <nav>
                         <ul>
                             <li><a href="#">Features</a></li>
@@ -187,7 +186,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div>
+                <div class="socials">
                     <nav>
                         <ul>
                             <li>
@@ -213,7 +212,6 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
         </footer>
     </body>
 </html>
